--- a/css/user.css
+++ b/css/user.css
@@ -13,6 +13,11 @@
 	padding-left: 20px;
 }
 
+#invalid-password,
+#invalid-account {
+	color: red;
+}
+
 /* Login icons */
 
 .favorite {
@@ -21,4 +26,19 @@
 
 .remove:hover {
 	color: red;
+}
+
+/* User Profile */
+
+.user-profile-container {
+	padding: 20px;
+	font-size: 0.8rem;
+}
+
+.user-profile-container > * {
+	margin: 5px;
+}
+
+.user-profile-container div {
+	margin: 5px;
 }
